# DS-Algorithms

./: CMakeLists.txt
src/backtracking/: CMakeLists.txt  NQueen.cpp  test.cpp
src/linked-list/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  consecutive.cpp  main.cpp
